@@ -3,7 +3,7 @@ Section: user/games
 Priority: optional
 Maintainer: Tomi Ollila <tomi.ollila@iki.fi>
 Uploaders: Tomi Ollila <tomi.ollila@iki.fi>
-Build-Depends: debhelper (>= 4.0.0), libosso-dev, libdbus-glib-1-2, libglib2.0-0, libosso1, libpango1.0-0, libfreetype6, libcairo2, libdbus-1-3, libhildon1, libhildon1-dev, libfontconfig1, libatk1.0-0, libgtk2.0-0 
+Build-Depends: debhelper (>= 4.0.0), libosso-dev, libdbus-glib-1-2, libglib2.0-0, libosso1, libpango-1.0-0, libpangocairo-1.0-0, libcairo2, libdbus-1-3, libhildon1, libhildon1-dev, libfontconfig1, libatk1.0-0, libgtk2.0-0
 Standards-Version: 3.6.1
 
 Package: 9x9-sudoku
