@@ -1,3 +1,9 @@
+9x9-sudoku (1.3)  unstable; urgency=low
+
+   * gcc 14 fixes, hildon fixes, debian deps fixes
+
+ -- Sander <code@kroket.io>  Fri, 19 Dec 2025 08:49:07 +0300
+
 9x9-sudoku (1.2)  unstable; urgency=low
 
    * Tuned Description field in debian/changelog.
